--- a/package.json
+++ b/package.json
@@ -6,23 +6,24 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@headlessui/react": "^1.4.2",
-        "@inertiajs/react": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.3",
-        "@vitejs/plugin-react": "^4.0.3",
-        "autoprefixer": "^10.4.12",
-        "axios": "^1.1.2",
-        "daisyui": "^3.6.1",
+        "@headlessui/react": "^1.7.17",
+        "@inertiajs/react": "^1.0.11",
+        "@tailwindcss/forms": "^0.5.6",
+        "@vitejs/plugin-react": "^4.0.4",
+        "autoprefixer": "^10.4.16",
+        "axios": "^1.5.0",
+        "daisyui": "^3.7.7",
         "laravel-vite-plugin": "^0.8.0",
-        "postcss": "^8.4.18",
-        "prettier": "^3.0.2",
-        "prettier-plugin-tailwindcss": "^0.5.3",
+        "postcss": "^8.4.30",
+        "prettier": "^3.0.3",
+        "prettier-plugin-tailwindcss": "^0.5.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwindcss": "^3.2.1",
-        "vite": "^4.0.0"
+        "tailwindcss": "^3.3.3",
+        "vite": "^4.4.9"
     },
     "dependencies": {
-        "react-icons": "^4.10.1"
+        "dayjs": "^1.11.10",
+        "react-icons": "^4.11.0"
     }
 }
